Remove deprecation compiler warning
Signed-off-by: Kenny Ballou <kb@devnulllabs.io>